--- a/01-snake/static/index.html
+++ b/01-snake/static/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <div id="game" class="container">
-    </div>
+    <div id="game" class="container" />
     <script src="../src/GameUI.ts"></script>
 </body>
 
