Upgrade parcel to v2; And update minesweeper dependencies

--- a/00-tic-tac-toe/static/index.html
+++ b/00-tic-tac-toe/static/index.html
@@ -20,7 +20,7 @@
             <div id="board"></div>
         </div>
     </div>
-    <script src="../src/GameUI.ts"></script>
+    <script type="module" src="../src/GameUI.ts"></script>
 </body>
 
 </html>
