--- a/01-snake/static/index.html
+++ b/01-snake/static/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="game" class="container" />
-    <script src="../src/GameUI.ts"></script>
+    <script type="module" src="../src/GameUI.ts"></script>
 </body>
 
 </html>
