--- a/02-minesweeper/static/index.html
+++ b/02-minesweeper/static/index.html
@@ -91,7 +91,7 @@
             </div>
         </div>
     </div>
-    <script src="../src/GameUI.ts"></script>
+    <script type="module" src="../src/GameUI.ts"></script>
 </body>
 
 </html>
